--- a/app/views/orders/edit.html.erb
+++ b/app/views/orders/edit.html.erb
@@ -11,6 +11,7 @@
 
 					<% if is_admin?(current_user) || @order.status == "Em aberto" %>
 		        <div class="actions">
+		          <%= link_to order_path(@order), class: "btn-info icon" do %><span class="material-symbols-outlined md-16">visibility</span>Ver detalhes<% end %>
 		        	<%= link_to "#", onclick: "$('.form').submit()", data: { disable_with: "Aguarde..." }, class: "btn-success icon" do %><span class="material-symbols-outlined md-16 md-light">done</span>Salvar<% end %>
 		          <%= link_to orders_path, class: "btn-cancel icon" do %><span class="material-symbols-outlined md-16">undo</span>Voltar<% end %>
 		          <%= link_to destroy_order_path(@order), method: :delete, data: { confirm: "Tem certeza? Essa ação é irreversível." }, class: "btn-alert icon" do %><span class="material-symbols-outlined md-16 md-light">close</span>Cancelar OS<% end %>
