many layout changes and added asynchronous requests

--- a/app/assets/stylesheets/base/_basic.scss
+++ b/app/assets/stylesheets/base/_basic.scss
@@ -292,6 +292,9 @@ dl {
 	display: flex;
 	gap: 15px;
 	justify-content: center;
+	background-color: rgba($grey, .75);
+	border-radius: 36px;
+	padding: 18px 27px;
 }
 
 .invert-svg {
