--- a/app/assets/stylesheets/base/_animations.scss
+++ b/app/assets/stylesheets/base/_animations.scss
@@ -14,3 +14,29 @@
       transform: translateX(0);
    }
 } 
+
+@keyframes fadeInBottom {
+   0% {
+      opacity: 0;
+      transform: translateY(50px);
+   }
+   50% {
+      opacity: .5;
+   }
+   100% {
+      opacity: 1;
+      transform: translateY(0);
+   }
+} 
+
+@keyframes fadeIn {
+   0% {
+      opacity: 0;
+   }
+   50% {
+      opacity: .5;
+   }
+   100% {
+      opacity: 1;
+   }
+}
