--- a/app/assets/stylesheets/core/_table.scss
+++ b/app/assets/stylesheets/core/_table.scss
@@ -38,6 +38,9 @@
     @include prefix(box-shadow, 0px 0px 9px 0px rgba(0,0,0,0.1));
     padding: 25px 30px;
     gap: 0 15px;
+    animation: fadeIn;
+    animation-duration: .5s;
+    animation-timing-function: ease-in-out;
 
     div[data-label="Status"] {
       font-weight: 600;
