--- a/app/assets/stylesheets/modules/_orders.scss
+++ b/app/assets/stylesheets/modules/_orders.scss
@@ -9,14 +9,16 @@
 					gap: 10px;
 					display: flex;
 					align-items: center;
-			    border-radius: 50px;
+			    border-radius: 36px;
+	        background-color: rgba($grey, .75);
+    			padding: 18px 27px;
 
 			    .btn-icon.active {
-			    	background-color: rgba(#fff, .5);
+			    	background-color: $dark-blue;
 			    	pointer-events: none;
 
 				    span {
-				      color: $dark-blue;
+				      color: $primary-color;
 				    }
 			    }
 				}
@@ -28,6 +30,9 @@
     	height: 70vh;
     	position: relative;
     	border-radius: 5px;
+    	animation: fadeInBottom;
+		  animation-duration: .5s;
+		  animation-timing-function: ease-in-out;
 
     	&.list {
     		overflow: initial;
@@ -548,45 +553,6 @@
 	}
 
 	&.new, &.create, &.edit, &.update, &.show {
-		.order-tabs {
-			position: relative;
-			display: flex;
-			justify-content: center;
-
-			&:after {
-				content: "";
-				position: absolute;
-				left: 0;
-				right: 0;
-				bottom: 0;
-				background-color: #d6d6d6;
-				display: inline-block;
-				height: 5px;
-			}
-
-			.order-tab button {
-				border-bottom: solid 5px #d6d6d6;
-				padding: 10px 20px;
-				cursor: pointer;
-				@include prefix(transition, all .5s cubic-bezier(.075,.82,.165,1));
-				position: relative;
-				z-index: 2;
-
-				&:hover, &.current {
-					border-color: $dark-blue;
-				}
-			}
-		}
-
-		.order-data {
-			width: 100%;
-			display: none;
-
-			&.current {
-				display: block;
-			}
-		}
-
 		.input.boolean, .input.boolean > label {
 			align-items: flex-start;
 			flex-flow: column;
