--- a/app/assets/stylesheets/modules/_users.scss
+++ b/app/assets/stylesheets/modules/_users.scss
@@ -1,5 +1,30 @@
 #users {
 	.main-panel .main-container {
+		.container-header {
+      display: flex;
+      align-items: center;
+
+      .right-content {
+        .action-buttons {
+          gap: 10px;
+          display: flex;
+          align-items: center;
+          border-radius: 36px;
+          background-color: rgba($grey, .75);
+          padding: 18px 27px;
+
+          .btn-icon.active {
+            background-color: $dark-blue;
+            pointer-events: none;
+
+            span {
+              color: $primary-color;
+            }
+          }
+        }
+      }
+    }
+
 		.container-body {
 			section {
 				h3 {
@@ -20,13 +45,12 @@
 	}
 
 	.username {
-		background-color: $dark-blue;
+		background-color: #d6d6d6;
 		padding: 15px;
 		border-radius: 5px;
 
 		&, span {
 			font-style: italic;
-			color: $primary-color;
 		}
 	}
 }
@@ -190,6 +214,11 @@
 					border-color: $info;
 				}
 			}
+		}
+
+		.actions {
+			background-color: transparent;
+			padding: 0;
 		}
 	}
 }
