--- a/app/views/home/profile.html.erb
+++ b/app/views/home/profile.html.erb
@@ -21,9 +21,41 @@
 		<div class="row">
 			<div class="col">
 				<section class="container-body">
-		  		<section>
-		  			<h3 class="m-b-25">Meus dados</h3>
+					<div class="tabs m-b-10">	
+						<div class="tab text-center">
+					  	<button class="tab-btn current" tab-data="user-info-data">
+						  	<span class="material-symbols-outlined md-20">person</span>
+						  	Meus dados
+						  </button>
+						</div>
 
+						<% if is_school?(current_user) %>
+							<div class="tab text-center">
+						  	<button class="tab-btn" tab-data="address-data">
+							  	<span class="material-symbols-outlined md-20">location_on</span>
+							  	Meus dados
+							  </button>
+							</div>
+						<% end %>
+
+						<div class="tab text-center">
+					  	<button class="tab-btn" tab-data="history-data">
+						  	<span class="material-symbols-outlined md-20">history</span>
+						  	Histórico
+						  </button>
+						</div>
+
+						<% if is_school?(current_user) %>
+							<div class="tab text-center">
+						  	<button class="tab-btn" tab-data="inventory-data">
+						  		<span class="material-symbols-outlined md-20">inventory</span>
+						  		Inventário
+						  	</button>
+							</div>
+						<% end %>
+					</div>
+
+		  		<section id="user-info-data" class="tab-data current">
 		  			<%= content_tag :dl do %>
 		    			<%= content_tag :dt, "Nome" %>
 		  				<%= content_tag :dd, username %>
@@ -55,7 +87,7 @@
 		  		</section>
 		      
 		      <% if is_school?(current_user) %>
-			  		<section>
+			  		<section id="address-data" class="tab-data">
 			  			<h3 class="m-b-25">Endereço</h3>
 
 			      	<%= content_tag :dl do %>
@@ -75,107 +107,13 @@
 			  		</section>
 			  	<% end %>
 
-		  		<section>
-		  			<h3 class="m-b-25">Histórico</h3>
-
-		  			<div class="row">
-							<div class="col-12">
-								<div class="card">
-									<% unless @orders.nil? || @orders.blank? %>
-										<div class="card-body">
-											<ul class="responsive-table">
-												<li class="table-header">
-													<div class="table-col table-col-5">#</div>
-													<div class="table-col table-col-10">Solicitante</div>
-													<div class="table-col table-col-15">Status</div>
-													<div class="table-col table-col-10">Tipo</div>
-													<div class="table-col table-col-30">Defeito apresentado</div>
-													<div class="table-col table-col-20">Atualizada em</div>
-													<div class="table-col table-col-10"><div class="options">Opções</div></div>
-												</li>
-
-												<% @orders.order("created_at DESC").each do |o| %>
-													<li class="table-row">
-														<div class="table-col table-col-5" data-label="#"><strong><%= o.id.to_s.rjust(3, '0') %></strong></div>
-														<div class="table-col table-col-10" data-label="Solicitante"><%= o.requester %></div>
-														<div class="table-col table-col-15" data-label="Status" data-status="<%= get_status(o.status) %>"><%= o.status %></div>
-														<div class="table-col table-col-10" data-label="Tipo"><%= o.o_type || " - " %></div>
-														<div class="table-col table-col-30" data-label="Defeito apresentado">
-															<div class="order-defect limited-text">
-																<%= o.defect.to_s.html_safe %>
-															</div>
-														</div>
-														<div class="table-col table-col-20" data-label="Atualizada em">
-															<%= content_tag :span do %>
-																<%= "#{o.updated_at.strftime("%d/%m/%Y")} por " %>
-																<%= link_to order_creator(o.updated_by), is_school?(User.find(o.updated_by)) ? school_path(o.school_id) : user_path(o.updated_by), class: "link"  %><br />
-																<%= o.updated_at.strftime("%H:%M") %>
-															<% end %>
-														</div>
-														<div class="table-col table-col-10" data-label="Opções">
-															<div class="options">
-											          <%= link_to order_path(o), alt: "Ver detalhes", title: "Ver detalhes", class: "btn-icon" do %><span class="material-symbols-outlined md-20">visibility</span><% end %>
-															</div>
-														</div>
-													</li>
-												<% end %>
-											</ul>
-
-											<%= paginate @orders, param_name: :orders_page %>
-										</div>
-									<% else %>
-										<h4 class="text-center m-t-25 p-b-50"><i>Nenhuma OS <%= is_school?(current_user) ? "registrada para sua unidade." : "atendida por você." %></i></h4>
-									<% end %>
-								</div>
-							</div>
-						</div>
+		  		<section id="history-data" class="tab-data">
+		  			<%= render 'orders' %>
 		  		</section>
 
 		  		<% if is_school?(current_user) %>
-			  		<section>
-			  			<h3 class="m-b-25">Inventário</h3>
-
-			  			<div class="row">
-								<div class="col-12">
-									<div class="card">
-										<% unless @stuffs.nil? || @stuffs.blank? %>
-											<div class="card-body">
-												<ul class="responsive-table">
-													<li class="table-header">
-														<div class="table-col table-col-15">Patrimônio</div>
-														<div class="table-col table-col-40">Categoria</div>
-														<div class="table-col table-col-35">Marca/modelo</div>
-														<div class="table-col table-col-10"><div class="options">Opções</div></div>
-													</li>
-
-													<% @stuffs.order("category ASC").each do |s| %>
-														<li class="table-row">
-															<div class="table-col table-col-15" data-label="Patrimônio"><%= s.patrimony.presence || "S/P" %></div>
-															<div class="table-col table-col-40" data-label="Categoria">
-																<% if s.category == 'PC/Notebook' %>
-																	<%= content_tag :span, "done", title: "Padrão OK", class: "material-symbols-outlined md-16 md-light m-r-5", style: "color: green" if s.defaulted == "Sim" %>
-																	<%= content_tag :span, "close", title: "Necessária padronização", class: "material-symbols-outlined md-16 md-light m-r-5", style: "color: red" if s.defaulted == "Não" %>
-																<% end %>
-																<%= s.category %>
-															</div>
-															<div class="table-col table-col-35" data-label="Marca/modelo"><%= s.brand %></div>
-															<div class="table-col table-col-10" data-label="Opções">
-																<div class="options">
-												          <%= link_to stuff_path(s), alt: "Ver detalhes", title: "Ver detalhes", class: "btn-icon" do %><span class="material-symbols-outlined md-20">visibility</span><% end %>
-																</div>
-															</div>
-														</li>
-													<% end %>
-												</ul>
-
-												<%= paginate @stuffs, param_name: :stuffs_page %>
-											</div>
-										<% else %>
-											<h4 class="text-center m-t-25 p-b-50"><i>Nenhum equipamento registrado para sua unidade.</i></h4>
-										<% end %>
-									</div>
-								</div>
-							</div>
+			  		<section id="inventory-data" class="tab-data">
+		  				<%= render 'stuffs' %>
 			  		</section>
 		      <% end %>
 				</section>
