--- a/app/views/orders/_order_card.html.erb
+++ b/app/views/orders/_order_card.html.erb
@@ -1,56 +1,58 @@
-<% unless orders.nil? || orders.blank? %>
-	<%= content_tag :div, class: "hidden-scrollbar" do %>
-		<%= content_tag :div, class: "order-container #{get_status(status)}" do %>
-			<%= content_tag :h4, class: "order-status-title" do %><%= status[/(.*)\s/,1] %> <span><%= status.split().last %></span> <i><%= orders.count %></i><% end %>
+<% @orders.group_by(&:status).each do |status, orders| %>
+	<% unless orders.nil? || orders.blank? %>
+		<%= content_tag :div, class: "hidden-scrollbar" do %>
+			<%= content_tag :div, class: "order-container #{get_status(status)}" do %>
+				<%= content_tag :h4, class: "order-status-title" do %><%= status[/(.*)\s/,1] %> <span><%= status.split().last %></span> <i><%= orders.count %></i><% end %>
 
-			<div class="order-cards">
-				<% orders.each do |order| %>
-					<%= content_tag :div, class: "order-card #{get_status(order.status)}" do %>
-						<header class="order-card-header">
-							<div class="left-content">
-								<%= content_tag :span, "##{order.id.to_s.rjust(3, '0')}", class: "order-id" %>
-								<%= content_tag :span, order.spot, class: "order-spot" %>
+				<div class="order-cards">
+					<% orders.each do |order| %>
+						<%= content_tag :div, class: "order-card #{get_status(order.status)}" do %>
+							<header class="order-card-header">
+								<div class="left-content">
+									<%= content_tag :span, "##{order.id.to_s.rjust(3, '0')}", class: "order-id" %>
+									<%= content_tag :span, order.spot, class: "order-spot" %>
+								</div>
+
+								<div class="right-content">
+									<%= content_tag :span, order.created_at, class: "order-creation-date" %>
+								</div>
+							</header>
+
+							<div class="order-card-body">
+								<%= content_tag :span, order.o_type if order.o_type != "" %>
+								<%= content_tag :h3, "#{order.stuff.category} #{get_patrimony(order.stuff.patrimony)}" %>
+								<div class="order-defect">
+									<%= content_tag :div, order.defect.to_s.html_safe, class: "limited-text" %>
+								</div>
 							</div>
 
-							<div class="right-content">
-								<%= content_tag :span, order.created_at, class: "order-creation-date" %>
-							</div>
-						</header>
+							<%= content_tag :footer, class: "order-card-footer" do %>
+								<%= link_to is_admin?(current_user) ? order.school.usual_name : "", school_path(order.school_id), "data-tooltip": order.school.full_name, title: order.school.full_name, class: "school-name tooltip-toggle" %>
+								
+								<div class="options">
+									<% if is_admin?(current_user) %>
+										<span class="material-symbols-outlined md-20 order-card-phone tooltip-toggle" data-tooltip="<%= order.school.phone %>" title="<%= order.school.phone %>">call</span>
+									<% end %>
 
-						<div class="order-card-body">
-							<%= content_tag :span, order.o_type if order.o_type != "" %>
-							<%= content_tag :h3, "#{order.stuff.category} #{get_patrimony(order.stuff.patrimony)}" %>
-							<div class="order-defect">
-								<%= content_tag :div, order.defect.to_s.html_safe, class: "limited-text" %>
-							</div>
-						</div>
+									<% if order.maintenance_technicians != [""] %>
+										<span class="material-symbols-outlined md-20 order-card-users tooltip-toggle" data-tooltip="<%= get_user(order.maintenance_technicians) %>" title="<%= get_user(order.maintenance_technicians) %>">
+											<%= order.maintenance_technicians.length > 2 ? "group" : "person" %>
+										</span>
+									<% end %>
 
-						<%= content_tag :footer, class: "order-card-footer" do %>
-							<%= link_to is_admin?(current_user) ? order.school.usual_name : "", school_path(order.school_id), "data-tooltip": order.school.full_name, title: order.school.full_name, class: "school-name tooltip-toggle" %>
-							
-							<div class="options">
-								<% if is_admin?(current_user) %>
-									<span class="material-symbols-outlined md-20 order-card-phone tooltip-toggle" data-tooltip="<%= order.school.phone %>" title="<%= order.school.phone %>">call</span>
-								<% end %>
-
-								<% if order.maintenance_technicians != [""] %>
-									<span class="material-symbols-outlined md-20 order-card-users tooltip-toggle" data-tooltip="<%= get_user(order.maintenance_technicians) %>" title="<%= get_user(order.maintenance_technicians) %>">
-										<%= order.maintenance_technicians.length > 2 ? "group" : "person" %>
-									</span>
-								<% end %>
-
-								<%= link_to "#", class: "options-btn" do %><span class="material-symbols-outlined md-20">more_vert</span><% end %>
-								<ul>
-									<li><%= link_to "<span class='material-symbols-outlined md-16'>print</span> Imprimir OS".html_safe, print_order_path(order), target: "_blank"  %></li>
-									<li><%= link_to "<span class='material-symbols-outlined md-16'>visibility</span> Ver detalhes".html_safe, order_path(order) %></li>
-									<li><%= link_to "<span class='material-symbols-outlined md-16'>edit</span> Editar".html_safe, edit_order_path(order) %></li>
-									<li><%= link_to "<span class='material-symbols-outlined md-16'>close</span> Cancelar OS".html_safe, destroy_order_path(order), method: :delete, data: { confirm: "Tem certeza? Essa ação é irreversível." } %></li>
-								</ul>
-							</div>
+									<%= link_to "#", class: "options-btn" do %><span class="material-symbols-outlined md-20">more_vert</span><% end %>
+									<ul>
+										<li><%= link_to "<span class='material-symbols-outlined md-16'>print</span> Imprimir OS".html_safe, print_order_path(order), target: "_blank"  %></li>
+										<li><%= link_to "<span class='material-symbols-outlined md-16'>visibility</span> Ver detalhes".html_safe, order_path(order) %></li>
+										<li><%= link_to "<span class='material-symbols-outlined md-16'>edit</span> Editar".html_safe, edit_order_path(order) %></li>
+										<li><%= link_to "<span class='material-symbols-outlined md-16'>close</span> Cancelar OS".html_safe, destroy_order_path(order), method: :delete, data: { confirm: "Tem certeza? Essa ação é irreversível." } %></li>
+									</ul>
+								</div>
+							<% end %>
 						<% end %>
 					<% end %>
-				<% end %>
-			</div>
+				</div>
+			<% end %>
 		<% end %>
 	<% end %>
 <% end %>
