--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -127,14 +127,12 @@
 					<div class="hidden-scrollbar <%= params[:view].presence %>">
 						<button class="prev-btn" title="Mover para esquerda"><span class="material-symbols-outlined">keyboard_double_arrow_left</span></button>
 						<button class="next-btn" title="Mover para direita"><span class="material-symbols-outlined">keyboard_double_arrow_right</span></button>
-						<section class="container-body <%= params[:view].presence %>">
-							<% @orders.group_by(&:status).each do |status, orders| %>
-								<%= render "order_card", orders: orders, status: status.downcase %>
-							<% end %>
+						<section class="container-body <%= params[:view].presence %>" id="order-cards">
+							<%= render "order_card" %>
 						</section>
 					</div>
 
-					<%= paginate @orders %>
+					<%= paginate @orders, remote: true %>
 				</div>
 			</div>
 		<% else %>
@@ -142,3 +140,5 @@
 		<% end %>
 	</div>
 </div>
+
+<%= teste = "bla" %>
