--- a/app/views/stuffs/index.html.erb
+++ b/app/views/stuffs/index.html.erb
@@ -10,8 +10,10 @@
 					<h1 class="header-title">Lista de <span>equipamentos</span> <%= content_tag :i, registered_data(@stuffs.count) %></h1>
 
 					<div class="right-content">
-						<%= link_to "#", alt: "Mostrar opções de pesquisa", title: "Mostrar opções de pesquisa", class: "btn-icon enable-filters" do %><span class="material-symbols-outlined md-16">search</span><% end %>
-						<%= link_to new_stuff_path, class: "btn-success icon" do %><span class="material-symbols-outlined md-16 md-light">add</span>Cadastrar equipamento<% end %>
+						<div class="action-buttons">
+							<%= link_to "#", alt: "Mostrar opções de pesquisa", title: "Mostrar opções de pesquisa", class: "btn-icon enable-filters" do %><span class="material-symbols-outlined md-16">search</span><% end %>
+							<%= link_to new_stuff_path, class: "btn-success icon" do %><span class="material-symbols-outlined md-16 md-light">add</span>Cadastrar equipamento<% end %>
+						</div>
 					</div>
 				</header>
 			</div>
@@ -69,46 +71,8 @@
 
 		<div class="row">
 			<div class="col">
-				<section class="container-body">
-					<% unless @stuffs_paginate.nil? || @stuffs_paginate.blank? %>
-						<ul class="responsive-table">
-							<li class="table-header">
-								<div class="table-col table-col-5"><%= link_to("#", request.params.merge(sort_by: "id"), class: ("active" if params[:sort_by] == "id")) %></div>
-								<div class="table-col table-col-10"><%= link_to("Patrimônio", request.params.merge(sort_by: "patrimony"), class: ("active" if params[:sort_by] == "patrimony")) %></div>
-								<div class="table-col table-col-20"><%= link_to("Categoria", request.params.merge(sort_by: "category"), class: ("active" if params[:sort_by] == "category")) %></div>
-								<div class="table-col table-col-15"><%= link_to("Marca/Modelo", request.params.merge(sort_by: "brand"), class: ("active" if params[:sort_by] == "brand")) %></div>
-								<%= content_tag :div, class: "table-col table-col-40" do %><%= link_to("Unidade", request.params.merge(sort_by: "schools.name_ascii"), class: ("active" if params[:sort_by] == "schools.name_ascii")) %><% end unless is_school?(current_user) %>
-								<div class="table-col table-col-10"><div class="options">Opções</div></div>
-							</li>
-
-							<% @stuffs_paginate.each do |s| %>
-								<li class="table-row">
-									<div class="table-col table-col-5" data-label="#"><strong><%= s.id.to_s.rjust(3, '0') %></strong></div>
-									<div class="table-col table-col-10" data-label="Patrimônio"><%= s.patrimony.presence || "S/P" %></div>
-									<div class="table-col table-col-20" data-label="Categoria">
-										<% if s.category == 'PC/Notebook' %>
-											<%= content_tag :span, "done", title: "Padrão OK", class: "material-symbols-outlined md-16 md-light m-r-5", style: "color: green" if s.defaulted == "Sim" %>
-											<%= content_tag :span, "close", title: "Necessária padronização", class: "material-symbols-outlined md-16 md-light m-r-5", style: "color: red" if s.defaulted == "Não" %>
-										<% end %>
-										<%= s.category %>
-									</div>
-									<div class="table-col table-col-15" data-label="Marca/Modelo"><%= s.brand %></div>
-									<%= content_tag :div, s.school.name, class: "table-col table-col-40", "data-label": "Unidade" unless is_school?(current_user) %>
-									<div class="table-col table-col-10" data-label="Opções">
-										<div class="options">
-											<%= link_to stuff_path(s), alt: "Ver detalhes", title: "Ver detalhes", class: "btn-icon" do %><span class="material-symbols-outlined md-20">visibility</span><% end %>
-						          <%= link_to edit_stuff_path(s), alt: "Editar", title: "Editar", class: "btn-icon" do %><span class="material-symbols-outlined md-20">edit</span><% end %>
-						          <%= link_to destroy_stuff_path(s), alt: "Excluir", title: "Excluir", method: :delete, data: { confirm: "Tem certeza? Essa ação é irreversível." }, class: "btn-icon" do %><span class="material-symbols-outlined md-20">delete</span><% end %>
-										</div>
-									</div>
-								</li>
-							<% end %>
-						</ul>
-
-						<%= paginate @stuffs_paginate %>	
-					<% else %>
-						<h3 class="text-center m-t-50"><i>Nenhum equipamento encontrado.</i></h3>
-					<% end %>
+				<section class="container-body" id="stuffs-data">
+					<%= render 'stuffs' %>
 				</section>
 			</div>
 		</div>
