--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -22,9 +22,23 @@
 		<div class="row">
 			<div class="col">
 				<section class="container-body">
-		  		<section>
-		  			<h3 class="m-b-25">Dados do usuário</h3>
+					<div class="tabs m-b-10">	
+						<div class="tab text-center">
+					  	<button class="tab-btn <%= 'current' if params[:page].nil? %>" tab-data="user-info-data">
+						  	<span class="material-symbols-outlined md-20">person</span>
+						  	Dados do usuário
+						  </button>
+						</div>
 
+						<div class="tab text-center">
+					  	<button class="tab-btn <%= 'current' if params[:page] %>" tab-data="history-data">
+						  	<span class="material-symbols-outlined md-20">history</span>
+						  	Histórico
+						  </button>
+						</div>
+					</div>
+
+		  		<section id="user-info-data" class="tab-data <%= 'current' if params[:page].nil? %>">
 		  			<%= content_tag :dl do %>
 		    			<%= content_tag :dt, "Nome" %>
 		  				<%= content_tag :dd, @user.name %>
@@ -41,60 +55,8 @@
 		  			<% end %>
 		  		</section>
 
-		  		<section>
-		  			<h3 class="m-b-25">Histórico</h3>
-
-		  			<div class="row">
-							<div class="col-12">
-								<div class="card">
-									<% unless @orders.nil? || @orders.blank? %>
-										<div class="card-body">
-											<ul class="responsive-table">
-												<li class="table-header">
-													<div class="table-col table-col-5">#</div>
-													<div class="table-col table-col-10">Solicitante</div>
-													<div class="table-col table-col-15">Status</div>
-													<div class="table-col table-col-10">Tipo</div>
-													<div class="table-col table-col-30">Defeito apresentado</div>
-													<div class="table-col table-col-20">Atualizada em</div>
-													<div class="table-col table-col-10"><div class="options">Opções</div></div>
-												</li>
-
-												<% @orders.order("created_at DESC").each do |o| %>
-													<li class="table-row">
-														<div class="table-col table-col-5" data-label="#"><strong><%= o.id.to_s.rjust(3, '0') %></strong></div>
-														<div class="table-col table-col-10" data-label="Solicitante"><%= o.requester %></div>
-														<div class="table-col table-col-15" data-label="Status" data-status="<%= get_status(o.status) %>"><%= o.status %></div>
-														<div class="table-col table-col-10" data-label="Tipo"><%= o.o_type || " - " %></div>
-														<div class="table-col table-col-30" data-label="Defeito apresentado">
-															<div class="order-defect limited-text">
-																<%= o.defect.to_s.html_safe %>
-															</div>
-														</div>
-														<div class="table-col table-col-20" data-label="Atualizada em">
-															<%= content_tag :span do %>
-																<%= "#{o.updated_at.strftime("%d/%m/%Y")} por " %>
-																<%= link_to order_creator(o.updated_by), is_school?(User.find(o.updated_by)) ? school_path(o.school_id) : user_path(o.updated_by), class: "link"  %><br />
-																<%= o.updated_at.strftime("%H:%M") %>
-															<% end %>
-														</div>
-														<div class="table-col table-col-10" data-label="Opções">
-															<div class="options">
-											          <%= link_to order_path(o), alt: "Ver detalhes", title: "Ver detalhes", class: "btn-icon" do %><span class="material-symbols-outlined md-20">visibility</span><% end %>
-															</div>
-														</div>
-													</li>
-												<% end %>
-											</ul>
-
-											<%= paginate @orders %>
-										</div>
-									<% else %>
-										<h4 class="text-center m-t-25 p-b-50"><i>Nenhuma OS atendida por este usuário.</i></h4>
-									<% end %>
-								</div>
-							</div>
-						</div>
+		  		<section id="history-data" class="tab-data <%= 'current' if params[:page] %>">
+		  			<%= render 'orders' %>
 		  		</section>
 				</section>
 			</div>
