added spinner to some loading actions

--- a/app/assets/stylesheets/base/_animations.scss
+++ b/app/assets/stylesheets/base/_animations.scss
@@ -40,3 +40,11 @@
       opacity: 1;
    }
 }
+
+@keyframes spin {
+  0%   { background-position: 0    0   , 0 100%, 100% 100% }
+  25%  { background-position: 100% 0   , 0 100%, 100% 100% }
+  50%  { background-position: 100% 0   , 0 0   , 100% 100% }
+  75%  { background-position: 100% 0   , 0 0   , 0    100% }
+  100% { background-position: 100% 100%, 0 0   , 0    100% }
+}
