--- a/app/assets/stylesheets/core/_main.scss
+++ b/app/assets/stylesheets/core/_main.scss
@@ -15,6 +15,7 @@
 		width: 100%;
 		overflow-y: auto;
 		padding: 15px 30px;
+		position: relative;
 
 		.container-header, .container-body {
 			padding: 15px 0;
