--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -2,6 +2,7 @@
 	<%= render "shared/main_menu" %>
 
 	<div class="main-container">
+		<%= render 'shared/spinner' %>
 		<%= flash_message %>
 
 		<div class="row">
@@ -140,5 +141,3 @@
 		<% end %>
 	</div>
 </div>
-
-<%= teste = "bla" %>
