--- a/app/views/stuffs/show.html.erb
+++ b/app/views/stuffs/show.html.erb
@@ -2,6 +2,7 @@
 	<%= render "shared/main_menu" %>
 
 	<div class="main-container">
+		<%= render 'shared/spinner' %>
 		<%= flash_message %>
 
 		<div class="row">
